--- a/style.css
+++ b/style.css
@@ -85,25 +85,6 @@ main h2 {
   line-height: 1em;
 }
 
-footer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: stretch;
-  padding: 4em;
-  background-color: rgb(224, 224, 224);
-}
-
-.footermenu a {
-  text-decoration: none;
-  color: black;
-  padding: 1em;
-}
-
-footer .logo {
-  margin-bottom: 25px;
-}
-
 article {
   display: flex;
   align-items: center;
@@ -270,57 +251,104 @@ article {
 }
 
 .galleryimg1 {
-  background: lightblue;
+  background-image: url(https://via.placeholder.com/500);
+  background-position: center;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
   grid-area: img1;
 }
 
 .galleryimg2 {
-  background: lightpink;
+  background-image: url(https://via.placeholder.com/500);
+  background-position: center;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
   grid-area: img2;
 }
 
 .galleryimg3 {
-  background: lightgreen;
+  background-image: url(https://via.placeholder.com/500);
+  background-position: center;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
   grid-area: img3;
 }
 
 .galleryimg4 {
-  background: lightseagreen;
+  background-image: url(https://via.placeholder.com/500);
+  background-position: center;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
   grid-area: img4;
 }
 
 .galleryimg5 {
-  background: lightblue;
+  background-image: url(https://via.placeholder.com/500);
+  background-position: center;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
   grid-area: img5;
 }
 
 .galleryimg6 {
-  background: lightpink;
+  background-image: url(https://via.placeholder.com/500);
+  background-position: center;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
   grid-area: img6;
 }
 
 .galleryimg7 {
-  background: lightgreen;
+  background-image: url(https://via.placeholder.com/500);
+  background-position: center;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
   grid-area: img7;
 }
 
 .galleryimg8 {
-  background: lightseagreen;
+  background-image: url(https://via.placeholder.com/500);
+  background-position: center;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
   grid-area: img8;
 }
 
 .gallerytext {
   background: white;
-  grid-row: span 3;
   display: grid;
   align-self: center;
   margin-left: -4em;
   margin-right: -4em;
   padding: 4em;
+  grid-area: text;
+  z-index: 10;
 }
 
-.gallery:nth-child(5) {
-  grid-column: 3;
-  grid-row: 1 / 2 / 3;
-  z-index: 1;
+footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: stretch;
+  padding: 4em;
+  background-color: rgb(150, 150, 150);
+  margin-top: 5em;
+}
+
+.footermenu a {
+  text-decoration: none;
+  color: black;
+  padding: 1em;
+}
+
+footer .logo {
+  margin-bottom: 25px;
 }
