--- a/styles/variabler/_variabler.scss
+++ b/styles/variabler/_variabler.scss
@@ -1,4 +1,6 @@
-$mobileSize: (max-width: 400px);
+$mobileSize: 350px;
+$tabletSize: 610px;
+$desktopSize: 850px;
 
 // Background-colors
 $lightGray: darken(white, 8%);
