--- a/styles/footer/_footer.scss
+++ b/styles/footer/_footer.scss
@@ -3,28 +3,34 @@ footer {
   flex-direction: column;
   align-items: center;
   justify-content: stretch;
-  padding: 4em;
-  background-color: rgb(150, 150, 150);
-  margin-top: 5em;
+  padding: 2em;
+  background-color: $lightGray;
+  margin-top: 1em;
 }
 
 .footermenu {
   a {
     text-decoration: none;
     color: black;
-    padding: 1em;
+    padding: 0.5em;
     font-weight: bold;
+    font-size: 11px;
 
-    @media ($mobileSize) {
-      padding: 0.5em;
+    @media (min-width: $mobileSize) {
+      font-size: 15px;
+    }
+
+    @media (min-width: $tabletSize) {
+      padding: 1em;
+      font-size: 16px;
     }
   }
 }
 
 footer {
-  @media ($mobileSize) {
-    padding: 2em;
-    margin-top: 1em;
+  @media (min-width: $tabletSize) {
+    padding: 4em;
+    margin-top: 5em;
   }
 
   .logo {
