--- a/styles/header/_navigator.scss
+++ b/styles/header/_navigator.scss
@@ -8,35 +8,45 @@
 .navigator {
   margin: 0.2em;
   display: flex;
-  justify-content: flex-end;
-  align-items: center;
+  flex-direction: column;
+  flex-wrap: wrap;
   background: $lightGray;
+  padding: 0.2em;
+
+  @media (min-width: $tabletSize) {
+    padding: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    flex-wrap: wrap;
+  }
 
   div:first-of-type {
-    margin-right: auto;
+    margin: auto;
 
-    @media ($mobileSize) {
-      margin: auto;
+    @media (min-width: $tabletSize) {
+      margin: 0;
+      margin-right: auto;
     }
+  }
+
+  div {
+    align-self: center;
   }
 
   a {
-    margin: 1em;
+    margin: 0.5em;
     text-decoration: none;
     color: black;
     font-weight: bold;
+    align-self: center;
+    font-size: 13px;
 
-    @media ($mobileSize) {
-      margin: 0.5em;
+    @media (min-width: $tabletSize) {
+      margin: 1em;
+      font-size: 18px;
     }
-  }
-
-  @media ($mobileSize) {
-    padding: 0.2em;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    background: darken(white, 8%);
   }
 
 }
