--- a/styles/maincontent/_aboutus.scss
+++ b/styles/maincontent/_aboutus.scss
@@ -1,30 +1,36 @@
 .aboutus {
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  min-height: 600px;
-  grid-gap: 6em;
+  margin: auto;
+  grid-template-rows: 0.5fr 1fr;
+  min-height: 400px;
+  grid-gap: 1em;
   background: white;
+  grid-template-areas:
+    "aboutustext"
+    "aboutusimg";
 
-  @media ($mobileSize) {
-    grid-template-rows: 0.5fr 1fr;
-    min-height: 600px;
-    grid-gap: 1em;
+  @media (min-width: $tabletSize) {
+    grid-template-columns: 1fr 1fr;
     grid-template-areas:
-      "aboutustext aboutustext"
-      "aboutusimg aboutusimg";
+      "aboutusimg aboutustext"
+      "aboutusimg aboutustext";
+  }
+
+  @media (min-width: $desktopSize) {
+    min-height: 550px;
   }
 }
 
+
 .aboutusimg {
-  background-image: url(https://via.placeholder.com/600);
-  background-position: center;
-  background-size: cover;
   width: 100%;
   height: 100%;
+  grid-area: aboutusimg;
+  max-width: 550px;
+  margin: auto;
 
-  @media ($mobileSize) {
-    grid-area: aboutusimg;
-    max-width: 400px;
+  @media (min-width: $tabletSize) {
+    margin: unset;
   }
 }
 
@@ -32,20 +38,23 @@
   display: grid;
   align-self: center;
   max-width: 500px;
-  padding-left: 3em;
-
-  @media ($mobileSize) {
-    grid-area: aboutustext;
-    padding-left: 1em;
-  }
+  padding-inline: 1em;
+  grid-area: aboutustext;
+  margin-bottom: 0;
 
   p {
-    font-size: 12px;
+    font-size: 14px;
+
+    @media (min-width: $tabletSize) {
+      font-size: unset;
+    }
   }
 
   h3 {
-    @media ($mobileSize) {
-      margin-bottom: 0;
+    font-size: 16px;
+
+    @media (min-width: $tabletSize) {
+      font-size: unset;
     }
   }
 }
