--- a/styles/maincontent/_services.scss
+++ b/styles/maincontent/_services.scss
@@ -1,115 +1,100 @@
-.overview {
+.socialmedia {
   background-color: white;
   width: 100%;
-  padding: 3em;
   display: flex;
   flex-direction: column;
   align-items: center;
 
-  @media ($mobileSize) {
-    padding: 1em;
+  @media (min-width: $desktopSize) {
+    padding: 3em;
   }
 }
 
-.moreboxes {
+
+.socialmediaboxes {
   display: flex;
   flex-wrap: wrap;
   max-width: 1100px;
   justify-content: center;
 
   img {
-    margin: 0.5em;
+    margin-inline: 0.2em;
     object-fit: contain;
-  }
-
-  a {
-    @media ($mobileSize) {
-      display: flex;
-      flex-basis: 100px;
-    }
+    min-width: 80px;
+    width: 20vw;
+    max-width: 170px;
   }
 }
 
 .tasks {
   display: grid;
-  grid-template-rows: 1fr 1fr;
-  grid-template-columns: 3fr 1fr 1fr 1fr;
-  grid-gap: 1em;
+  grid-template-rows: 0.5fr 0.5fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
+  grid-template-areas:
+    "taskstext taskstext"
+    "taskstext taskstext"
+    "taskimg1 taskimg2"
+    "taskimg4 taskimg4";
+  grid-gap: 0.5em;
+  padding: 0.5em;
+  margin: 0.5em;
   min-height: 450px;
-  padding: 3em;
-  margin: 3em;
 
-  @media ($mobileSize) {
-    grid-template-rows: 0.5fr 0.5fr 1fr 1fr;
-    grid-template-columns: 1fr 1fr;
+  @media (min-width: $tabletSize) {
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 2fr 1fr 1fr;
+    grid-gap: 1em;
+    min-height: 450px;
+    padding: 1.5em;
+    margin: 1.5em;
     grid-template-areas:
-      "taskstext tasktext"
-      "taskstext tasktext"
-      "taskimg1 taskimg2"
-      "taskgimg4 taskimg4";
-    grid-gap: 0.5em;
-    padding: 0.5em;
-    margin: 0.5em;
+      "taskstext taskimg1 taskimg2"
+      "taskstext taskimg4 taskimg4";
+  }
+
+  @media (min-width: $desktopSize) {
+    grid-template-columns: 3fr 1fr 1fr 1fr;
+    padding: 3em;
+    margin: 3em;
+    grid-template-areas:
+      "taskstext taskimg1 taskimg2 taskimg3"
+      "taskstext taskimg4 taskimg4 taskimg3";
   }
 }
 
 .tasksimg1 {
-  background-position: center;
-  background-size: cover;
   width: 100%;
   height: 100%;
-
-  @media ($mobileSize) {
-    grid-area: taskimg1;
-  }
+  grid-area: taskimg1;
 }
 
 .tasksimg2 {
-  background-position: center;
-  background-size: cover;
   width: 100%;
   height: 100%;
-
-  @media ($mobileSize) {
-    grid-area: taskimg2;
-  }
+  grid-area: taskimg2;
 }
 
 .tasksimg3 {
-  background-position: center;
-  background-size: cover;
-  width: 100%;
-  height: 100%;
-  grid-row: span 2;
+  display: none;
 
-  @media ($mobileSize) {
-    display: none;
+  @media (min-width: $tabletSize) {
+    display: unset;
+    width: 100%;
+    height: 100%;
+    grid-row: span 2;
+    grid-area: taskimg3;
   }
 }
 
 .tasksimg4 {
-  background-position: center;
-  background-size: cover;
   width: 100%;
   height: 100%;
-  grid-column: span 2;
-
-  @media ($mobileSize) {
-    grid-area: taskimg4;
-    grid-column: span 2;
-  }
+  grid-area: taskimg4;
 }
 
 .taskspara {
   display: grid;
-  grid-row: span 2;
-
-  @media ($mobileSize) {
-    grid-area: taskstext;
-    display: grid;
-    grid-row: span 2;
-    grid-column: span 2;
-  }
+  grid-area: taskstext;
 }
 
 .para {
