--- a/styles/header/_navigator.scss
+++ b/styles/header/_navigator.scss
@@ -2,7 +2,7 @@
   padding: 10px;
   width: 100%;
   z-index: 10;
-  background-color: $lightGray;
+  background-color: #394951;
 }
 
 .navigator {
@@ -10,7 +10,7 @@
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  background: $lightGray;
+  background: #394951;
   padding: 0.2em;
 
   @media (min-width: $tabletSize) {
@@ -24,6 +24,7 @@
 
   div:first-of-type {
     margin: auto;
+    color: #ff8673;
 
     @media (min-width: $tabletSize) {
       margin: 0;
@@ -38,7 +39,7 @@
   a {
     margin: 0.5em;
     text-decoration: none;
-    color: black;
+    color: #eaddd9;
     font-weight: bold;
     align-self: center;
     font-size: 13px;
@@ -52,11 +53,11 @@
 }
 
 .logo {
-  background: lightgray;
   width: 120px;
   height: 30px;
   justify-content: center;
   display: flex;
   align-items: center;
   font-weight: bold;
+  color: #ff8673;
 }
