--- a/styles/main.css
+++ b/styles/main.css
@@ -26,7 +26,7 @@ main {
       -ms-flex-align: center;
           align-items: center;
   margin: auto;
-  background-color: #ebebeb;
+  background-color: #fafafa;
 }
 
 main .informationwrapper {
@@ -44,13 +44,14 @@ main .informationwrapper {
 
 .grid {
   margin: auto;
+  background: #fafafa;
 }
 
 .top {
   padding: 10px;
   width: 100%;
   z-index: 10;
-  background-color: #ebebeb;
+  background-color: #394951;
 }
 
 .navigator {
@@ -64,7 +65,7 @@ main .informationwrapper {
           flex-direction: column;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  background: #ebebeb;
+  background: #394951;
   padding: 0.2em;
 }
 
@@ -91,6 +92,7 @@ main .informationwrapper {
 
 .navigator div:first-of-type {
   margin: auto;
+  color: #ff8673;
 }
 
 @media (min-width: 610px) {
@@ -109,7 +111,7 @@ main .informationwrapper {
 .navigator a {
   margin: 0.5em;
   text-decoration: none;
-  color: black;
+  color: #eaddd9;
   font-weight: bold;
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
@@ -125,7 +127,6 @@ main .informationwrapper {
 }
 
 .logo {
-  background: lightgray;
   width: 120px;
   height: 30px;
   -webkit-box-pack: center;
@@ -138,6 +139,7 @@ main .informationwrapper {
       -ms-flex-align: center;
           align-items: center;
   font-weight: bold;
+  color: #ff8673;
 }
 
 .rubrik {
@@ -176,6 +178,15 @@ main .informationwrapper {
   }
 }
 
+.rubrik h1 {
+  color: #ff8673;
+}
+
+.rubrik p {
+  color: white;
+  text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+}
+
 .informationwrapper {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -195,6 +206,8 @@ main .informationwrapper {
 .informationwrapper h2 {
   padding-bottom: 1em;
   margin-bottom: 0;
+  font-size: 2.5em;
+  color: #9d5c5f;
 }
 
 @media (min-width: 350px) {
@@ -250,7 +263,9 @@ main .informationwrapper {
 }
 
 .informationwrapper .fonts h3 {
-  margin-bottom: 0;
+  margin-bottom: 0.2em;
+  color: #9d5c5f;
+  font-size: 1.5em;
 }
 
 .informationfirstpost {
@@ -308,7 +323,7 @@ main .informationwrapper {
 }
 
 .socialmedia {
-  background-color: white;
+  background-color: #394951;
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -320,6 +335,8 @@ main .informationwrapper {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  color: #ff8673;
+  font-size: 2em;
 }
 
 @media (min-width: 850px) {
@@ -347,6 +364,7 @@ main .informationwrapper {
   min-width: 80px;
   width: 20vw;
   max-width: 170px;
+  border: 3px solid white;
 }
 
 .tasks {
@@ -358,9 +376,11 @@ main .informationwrapper {
       grid-template-columns: 1fr 1fr;
       grid-template-areas: "taskstext taskstext" "taskstext taskstext" "taskimg1 taskimg2" "taskimg4 taskimg4";
   grid-gap: 0.5em;
-  padding: 0.5em;
-  margin: 0.5em;
+  padding: 1em;
   min-height: 450px;
+  background: white;
+  max-width: 1200px;
+  margin: auto;
 }
 
 @media (min-width: 610px) {
@@ -371,8 +391,7 @@ main .informationwrapper {
         grid-template-columns: 2fr 1fr 1fr;
     grid-gap: 1em;
     min-height: 450px;
-    padding: 1.5em;
-    margin: 1.5em;
+    padding: 3em;
         grid-template-areas: "taskstext taskimg1 taskimg2" "taskstext taskimg4 taskimg4";
   }
 }
@@ -381,8 +400,8 @@ main .informationwrapper {
   .tasks {
     -ms-grid-columns: 3fr 1fr 1fr 1fr;
         grid-template-columns: 3fr 1fr 1fr 1fr;
-    padding: 3em;
-    margin: 3em;
+    padding: 6em;
+    gap: 2em;
         grid-template-areas: "taskstext taskimg1 taskimg2 taskimg3" "taskstext taskimg4 taskimg4 taskimg3";
   }
 }
@@ -449,6 +468,10 @@ main .informationwrapper {
   font-size: 12px;
 }
 
+.para h3 {
+  color: #9d5c5f;
+}
+
 .aboutus {
   display: -ms-grid;
   display: grid;
@@ -457,7 +480,7 @@ main .informationwrapper {
       grid-template-rows: 0.5fr 1fr;
   min-height: 400px;
   grid-gap: 1em;
-  background: white;
+  background: #394951;
       grid-template-areas: "aboutustext" "aboutusimg";
 }
 
@@ -506,6 +529,7 @@ main .informationwrapper {
 
 .aboutustext p {
   font-size: 14px;
+  color: white;
 }
 
 @media (min-width: 610px) {
@@ -516,11 +540,13 @@ main .informationwrapper {
 
 .aboutustext h3 {
   font-size: 16px;
+  color: #ff8673;
 }
 
 @media (min-width: 610px) {
   .aboutustext h3 {
-    font-size: unset;
+    font-size: 24px;
+    margin-bottom: 0;
   }
 }
 
@@ -547,7 +573,8 @@ main .informationwrapper {
 
 @media (min-width: 610px) {
   .gallery {
-    min-height: 500px;
+    min-height: 450px;
+    padding-block: 3em;
   }
 }
 
@@ -649,7 +676,7 @@ main .informationwrapper {
 }
 
 .gallerytext {
-  background: white;
+  background: #9aa5aa;
   display: -ms-grid;
   display: grid;
   place-self: center;
@@ -696,11 +723,12 @@ main .informationwrapper {
   font-size: 1em;
   width: 100%;
   margin-bottom: 1em;
+  color: #ffaf89;
 }
 
 @media (min-width: 850px) {
   .gallerytext h3 {
-    font-size: unset;
+    font-size: 1.3em;
   }
 }
 
@@ -708,6 +736,7 @@ main .informationwrapper {
   margin: 0;
   font-size: 0.7em;
   width: 100%;
+  color: white;
 }
 
 @media (min-width: 850px) {
@@ -731,13 +760,12 @@ footer {
       -ms-flex-pack: stretch;
           justify-content: stretch;
   padding: 2em;
-  background-color: #ebebeb;
-  margin-top: 1em;
+  background-color: #2d3039;
 }
 
 .footermenu a {
   text-decoration: none;
-  color: black;
+  color: #eaddd9;
   padding: 0.5em;
   font-weight: bold;
   font-size: 11px;
@@ -759,7 +787,6 @@ footer {
 @media (min-width: 610px) {
   footer {
     padding: 4em;
-    margin-top: 5em;
   }
 }
 
