--- a/styles/maincontent/_articles.scss
+++ b/styles/maincontent/_articles.scss
@@ -9,6 +9,8 @@
   h2 {
     padding-bottom: 1em;
     margin-bottom: 0;
+    font-size: 2.5em;
+    color: #9d5c5f;
 
     @media (min-width: $mobileSize) {
       padding: 2em;
@@ -45,7 +47,9 @@
     }
 
     h3 {
-      margin-bottom: 0;
+      margin-bottom: 0.2em;
+      color: #9d5c5f;
+      font-size: 1.5em;
     }
   }
 }
