--- a/styles/maincontent/_services.scss
+++ b/styles/maincontent/_services.scss
@@ -1,9 +1,11 @@
 .socialmedia {
-  background-color: white;
+  background-color: #394951;
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  color: #ff8673;
+  font-size: 2em;
 
   @media (min-width: $desktopSize) {
     padding: 3em;
@@ -23,6 +25,7 @@
     min-width: 80px;
     width: 20vw;
     max-width: 170px;
+    border: 3px solid white;
   }
 }
 
@@ -36,17 +39,19 @@
     "taskimg1 taskimg2"
     "taskimg4 taskimg4";
   grid-gap: 0.5em;
-  padding: 0.5em;
-  margin: 0.5em;
+  padding: 1em;
   min-height: 450px;
+  background: white;
+  max-width: 1200px;
+  margin: auto;
+
 
   @media (min-width: $tabletSize) {
     grid-template-rows: 1fr 1fr;
     grid-template-columns: 2fr 1fr 1fr;
     grid-gap: 1em;
     min-height: 450px;
-    padding: 1.5em;
-    margin: 1.5em;
+    padding: 3em;
     grid-template-areas:
       "taskstext taskimg1 taskimg2"
       "taskstext taskimg4 taskimg4";
@@ -54,8 +59,8 @@
 
   @media (min-width: $desktopSize) {
     grid-template-columns: 3fr 1fr 1fr 1fr;
-    padding: 3em;
-    margin: 3em;
+    padding: 6em;
+    gap: 2em;
     grid-template-areas:
       "taskstext taskimg1 taskimg2 taskimg3"
       "taskstext taskimg4 taskimg4 taskimg3";
@@ -104,5 +109,9 @@
 
   p {
     font-size: 12px;
+  }
+
+  h3 {
+    color: #9d5c5f;
   }
 }
