--- a/styles/wrappers/_wrappers.scss
+++ b/styles/wrappers/_wrappers.scss
@@ -18,7 +18,7 @@ main {
   flex-direction: column;
   align-items: center;
   margin: auto;
-  background-color: $lightGray;
+  background-color: #fafafa;
 
   .informationwrapper {
     max-width: 900px;
@@ -36,4 +36,5 @@ main {
 
 .grid {
   margin: auto;
+  background: #fafafa;
 }
